Correct project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@buddenbrock/advertisement-lightbox.js",
+  "name": "@buddenbrock/ad-lightbox.js",
   "description": "Javascript for adding an advertisement lightbox",
   "version": "0.0.1",
   "keywords": [
